service api and analytics api ended
